tests/cases/errors/unpacked_array_decl/main.sv
module Top;
  logic arr [4];
endmodule
